# DeltaTrace

./: .gitattributes  .gitignore  DeltaTrace.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt
benchmarks/: __init__.py  datasets.py  metrics.py  run.py  synth.py  systems.py
deltatrace/: __init__.py  cli.py  diffing.py  identity.py  matching.py  repo.py  storage.py
examples/: demo.py
notebooks/: 01_keyless_versioning_demo.ipynb  02_benchmark_famous_datasets.ipynb  prototype.ipynb
tests/: conftest.py  test_cli.py  test_content_match.py  test_diffing.py  test_repo_roundtrip.py  test_snapshot.py
