[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "deltatrace"
version = "0.2.0"
description = "Git-style version control for tabular data: delta commits, recursive reconstruction and snapshots over Parquet."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Viswas Reddy Pallamreddy" }]
keywords = ["data-versioning", "parquet", "pandas", "delta", "lakehouse", "time-travel"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
]
dependencies = ["pandas>=1.5", "pyarrow>=10.0", "numpy>=1.23"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "rapidfuzz>=3.0"]
fast = ["rapidfuzz>=3.0"]
bench = ["rapidfuzz>=3.0", "matplotlib>=3.5", "numpy>=1.23", "jupyterlab", "ipykernel", "nbclient>=0.7", "nbformat>=5"]

[project.scripts]
deltatrace = "deltatrace.cli:main"

[project.urls]
Homepage = "https://github.com/Viswas-Reddy-PallamReddy/DeltaTrace"

[tool.setuptools]
packages = ["deltatrace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
